--- a/index.html
+++ b/index.html
@@ -4,6 +4,8 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1" />
     <title>Connections Companion</title>
+    <link rel="icon" type="image/svg+xml" href="icon.svg">
+    
     <style>
         html {
             -webkit-text-size-adjust: 100%;
